[gd_scene load_steps=7 format=3 uid="uid://21dnwu6pujs7"]

[ext_resource type="Script" path="res://adventur of timtim/playeroptions.gd" id="1_jjg05"]
[ext_resource type="FontFile" uid="uid://bia8caotvwmpj" path="res://fonts/apercumovistarbold.ttf" id="2_1ytyg"]
[ext_resource type="Script" path="res://adventur of timtim/windowmodebutton.gd" id="3_ccbuo"]
[ext_resource type="Script" path="res://adventur of timtim/resbutton.gd" id="4_ymdpx"]
[ext_resource type="AudioStream" uid="uid://dgpj2bflal4yj" path="res://sound/echo-105584.wav" id="5_exwiw"]
[ext_resource type="AudioStream" uid="uid://c1r04sa1ajj8w" path="res://sound/click-with-big-reverb-28848.wav" id="6_4n1gg"]

[node name="playeroptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjg05")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 171.0
offset_top = 502.0
offset_right = 211.0
offset_bottom = 542.0
scale = Vector2(7.12513, 6.54891)

[node name="volume" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 0
offset_left = 171.0
offset_top = 502.0
offset_right = 211.0
offset_bottom = 510.0
scale = Vector2(5.31804, 6.66011)

[node name="Label" type="Label" parent="volume"]
texture_filter = 2
layout_mode = 0
offset_left = 0.940197
offset_top = 0.150147
offset_right = 46.9402
offset_bottom = 23.1501
scale = Vector2(0.673306, 0.380237)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "MUSIC"

[node name="Label2" type="Label" parent="volume"]
visible = false
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
texture_filter = 2
layout_mode = 0
offset_left = 2.06843
offset_top = -0.600592
offset_right = 48.0684
offset_bottom = 22.3994
scale = Vector2(0.695863, 0.461169)
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "MUSIC"

[node name="graphics" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 0
offset_left = 169.0
offset_top = 569.0
offset_right = 209.0
offset_bottom = 577.0
scale = Vector2(6.18526, 6.0453)

[node name="Label3" type="Label" parent="graphics"]
texture_filter = 2
layout_mode = 0
offset_left = 0.80837
offset_top = -0.59335
offset_right = 76.8084
offset_bottom = 22.4067
scale = Vector2(0.456821, 0.487155)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "GRAPHICS"

[node name="Label4" type="Label" parent="graphics"]
visible = false
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
texture_filter = 2
layout_mode = 0
offset_left = 0.646696
offset_top = -0.758767
offset_right = 76.6467
offset_bottom = 22.2412
scale = Vector2(0.470833, 0.511114)
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "GRAPHICS"

[node name="back" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 0
offset_left = 174.0
offset_top = 445.0
offset_right = 214.0
offset_bottom = 453.0
scale = Vector2(3.86007, 6.24147)

[node name="Label5" type="Label" parent="back"]
texture_filter = 2
layout_mode = 0
offset_left = 0.259061
offset_top = -0.480656
offset_right = 58.2591
offset_bottom = 22.5193
scale = Vector2(0.869706, 0.38102)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "RESUME"

[node name="Label6" type="Label" parent="back"]
visible = false
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
texture_filter = 2
layout_mode = 0
offset_left = 1.03625
offset_top = -0.160223
offset_right = 42.0362
offset_bottom = 22.8398
scale = Vector2(0.891714, 0.406502)
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "RESUME"

[node name="windowmodebutton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -206.0
offset_top = 170.0
offset_right = -166.0
offset_bottom = 210.0
scale = Vector2(1.12466, 1.06865)
script = ExtResource("3_ccbuo")

[node name="HBoxContainer" type="HBoxContainer" parent="windowmodebutton"]
layout_mode = 0
offset_left = 615.297
offset_top = 104.805
offset_right = 1365.3
offset_bottom = 168.805
scale = Vector2(2.35172, 1.74354)
theme_override_constants/separation = 160

[node name="Label" type="Label" parent="windowmodebutton/HBoxContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "WINDOW MODE               "

[node name="OptionButton" type="OptionButton" parent="windowmodebutton/HBoxContainer"]
custom_minimum_size = Vector2(42.415, 0)
layout_mode = 2

[node name="resbutton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 45.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 42.0
scale = Vector2(2.07284, 1.21583)
script = ExtResource("4_ymdpx")

[node name="HBoxContainer" type="HBoxContainer" parent="resbutton"]
layout_mode = 0
offset_left = 218.369
offset_top = 374.834
offset_right = 418.369
offset_bottom = 414.834
scale = Vector2(1.30784, 2.15692)

[node name="Label" type="Label" parent="resbutton/HBoxContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "RESOLUTÄ°ON                                                         "

[node name="OptionButton" type="OptionButton" parent="resbutton/HBoxContainer"]
custom_minimum_size = Vector2(80.775, 0)
layout_mode = 2

[node name="QUIT" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 0
offset_left = 176.0
offset_top = 628.0
offset_right = 216.0
offset_bottom = 636.0
scale = Vector2(3.86007, 6.24147)

[node name="LabelQ" type="Label" parent="QUIT"]
texture_filter = 2
layout_mode = 0
offset_left = 1.30153
offset_top = -0.3962
offset_right = 42.3015
offset_bottom = 22.6038
scale = Vector2(0.869706, 0.38102)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "QUIT"

[node name="LabelQ1" type="Label" parent="QUIT"]
visible = false
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
texture_filter = 2
layout_mode = 0
offset_left = 1.03625
offset_top = -0.160223
offset_right = 42.0362
offset_bottom = 22.8398
scale = Vector2(0.891714, 0.406502)
theme_override_fonts/font = ExtResource("2_1ytyg")
text = "QUIT"

[node name="echo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_exwiw")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4n1gg")

[connection signal="mouse_entered" from="volume" to="." method="_on_volume_mouse_entered"]
[connection signal="mouse_exited" from="volume" to="." method="_on_volume_mouse_exited"]
[connection signal="pressed" from="volume" to="." method="_on_volume_pressed"]
[connection signal="mouse_entered" from="graphics" to="." method="_on_graphics_mouse_entered"]
[connection signal="mouse_exited" from="graphics" to="." method="_on_graphics_mouse_exited"]
[connection signal="pressed" from="graphics" to="." method="_on_graphics_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="QUIT" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="QUIT" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="QUIT" to="." method="_on_quit_pressed"]
